# ChainReaction

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Makefile  README.md  docker-compose.yml  idea.md  pyproject.toml
.kiro/specs/chain-reaction/: design.md  requirements.md  tasks.md
data/: .gitkeep
docs/: api.md  architecture.md  deployment.md  development.md  future.md  models.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/__tests__/: dashboardUtils.test.ts
frontend/app/components/: AlertsPanel.tsx  AnalyticsPanel.tsx  ChatInterface.tsx  NodeDetailsPanel.tsx  NotificationsPanel.tsx  RiskMap.tsx  SettingsPanel.tsx  SupplyChainGraph.tsx
frontend/app/utils/: dashboardUtils.ts
frontend/types/: react-simple-maps.d.ts
scripts/: generate_data.py  seed_database.py
src/: __init__.py  config.py  models.py
src/agents/: __init__.py  nodes.py  queries.py  scout.py  sources.py  state.py  workflow.py
src/analysis/: __init__.py  accessibility.py  alerts.py  integrity.py  mitigation.py  modules.py  performance.py  plugins.py  predictive.py  prioritization.py  reporting.py  resilience.py  search.py  signatures.py  training.py  validation.py
src/api/: __init__.py  auth.py  main.py  routes.py  routes_v2.py  schemas.py  webhooks.py  webhooks_routes.py
src/data/: __init__.py  entity_manager.py  import_export.py
src/graph/: __init__.py  connection.py  impact.py  queries.py  repository.py  traversal.py
src/llm/: __init__.py  provider.py
tests/: __init__.py  conftest.py  strategies.py
tests/integration/: test_workflows.py
tests/property/: __init__.py  test_accessibility.py  test_alerts.py  test_api.py  test_data_models.py  test_extraction.py  test_graph_integrity.py  test_impact.py  test_json_import.py  test_mitigation.py  test_performance.py  test_plugins.py  test_predictive.py  test_prioritization.py  test_resilience.py  test_scout.py  test_search.py  test_visualization.py  test_workflow.py
tests/unit/: test_analysis.py  test_api.py  test_data.py  test_generator.py  test_impact.py  test_llm.py  test_mitigation.py  test_models.py  test_scout.py  test_workflow.py
